# MasterDiploma

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_consumer  docker-compose.yaml  prometheus.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  routers.py
app/api/v1/: __init__.py  upscale_v1.py
app/api/ws/: __init__.py  websocket.py
app/core/: __init__.py  conf.py  register.py
app/models/: __init__.py  request_model.py  response_model.py  task_model.py
app/services/: __init__.py  helper.py  image_service.py  image_worker.py  kafka.py  kafka_service.py  redis_service.py  retry_pending_tasks_worker.py  socket_manager.py  state.py
app/utils/: __init__.py  redis_utils.py  task_status.py
consumer/: image_worker.py  main.py
consumer/conf/: logger.py  settings.py
consumer/services/: __init__.py  redis_service.py  triton_service.py
consumer/utils/: __init__.py  task_model.py  task_status.py
model_repository/image_scale_l_x2/: config.pbtxt
