[tool.poetry]
name = "masterdiploma"
version = "0.1.0"
description = ""
authors = ["Stakheev Dmitrii <Dmitriy.Stakheev@softline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic-settings = "^2.9.1"
pydantic = "^2.11.3"
loguru = "^0.7.3"
path = "^17.1.0"
aiokafka = "^0.12.0"
pillow = "^11.2.1"
redis = "^5.2.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
