[tool.poetry]
name = "masterdiploma"
version = "1.3.0"
description = ""
authors = ["Stakheev Dmitrii <Dmitriy.Stakheev@softline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.9.1"
pydantic = "^2.11.3"
loguru = "^0.7.3"
path = "^17.1.0"
aiokafka = "^0.12.0"
redis = "^5.2.1"
python-multipart = "^0.0.20"
opencv-python = "^4.11.0.86"
numpy = "^2.2.6"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[tool.poetry.group.api.dependencies]
fastapi = "^0.116.0"
uvicorn = "^0.35.0"

[tool.poetry.group.consumer.dependencies]
tritonclient = {extras = ["http", "cuda"], version = "^2.58.0"}
torch = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
